# semcache

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: basic_example.py  basic_usage.py  configurable_threshold.py  decorator_usage.py  rag_usage.py
semcache/: __init__.py
semcache/cache/: exact_cache.py
semcache/core/: cache_manager.py  semcache.py
semcache/decorators/: __init__.py  cache_decorator.py
semcache/embeddings/: sentence_transformer.py
semcache/metrics/: stats.py
semcache/stores/: faiss_store.py  metadata_store.py
semcache/utils/: hashing.py  normalize.py  prompt_canonicalizer.py  question_extractor.py  storage_init.py
tests/: test_cache_manager.py  test_decorator.py  test_embeddings.py  test_faiss_store.py  test_metadata_store.py  test_prompt_canonicalizer.py  test_public_api.py  test_utils.py
