[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semcache"
version = "0.1.0"
description = "Semantic caching for LLM calls to reduce cost and latency."
authors = [{name = "Krishna Thakkar"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "semantic-cache", "vector-search", "faiss"]
dependencies = [
    "faiss-cpu",
    "sentence-transformers",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semcache*"]
